@@ -1,3 +1,7 @@
+2021-05-16  Robby Stephenson  <robby@periapsis.org>
+
+	* Allow user-entered language selection for TheMovieDB.
+
 2021-05-09  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 3.4.1.
